src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LIST

Grammar

Rule 0     S' -> expression
Rule 1     expression -> LPAREN expression RPAREN
Rule 2     expression -> expression PLUS expression
Rule 3     expression -> expression MINUS expression
Rule 4     expression -> expression TIMES expression
Rule 5     expression -> expression DIVIDE expression
Rule 6     expression -> MINUS expression
Rule 7     expression -> NUMBER
Rule 8     string -> STR
Rule 9     expression -> string
Rule 10    char -> CHAR
Rule 11    expression -> char
Rule 12    int -> INT
Rule 13    float -> FLOAT
Rule 14    empty -> _
Rule 15    expression -> INT expression
Rule 16    expression -> FLOAT expression
Rule 17    expression -> PRINT expression
Rule 18    expression -> INT string PLUS string
Rule 19    expression -> INT string MINUS string
Rule 20    expression -> INT string TIMES string
Rule 21    expression -> INT string DIVIDE string
Rule 22    expression -> float string PLUS string
Rule 23    expression -> float string MINUS string
Rule 24    expression -> float string TIMES string
Rule 25    expression -> float string DIVIDE string
Rule 26    expression -> float char PLUS char
Rule 27    expression -> float char MINUS char
Rule 28    expression -> float char TIMES char
Rule 29    expression -> float char DIVIDE char
Rule 30    expression -> int char PLUS char
Rule 31    expression -> int char MINUS char
Rule 32    expression -> int char TIMES char
Rule 33    expression -> int char DIVIDE char
Rule 34    expression -> INT STR PLUS STR
Rule 35    expression -> INT STR MINUS STR
Rule 36    expression -> INT STR TIMES STR
Rule 37    expression -> INT STR DIVIDE STR
Rule 38    expression -> INT CHAR PLUS CHAR
Rule 39    expression -> INT CHAR MINUS CHAR
Rule 40    expression -> INT CHAR TIMES CHAR
Rule 41    expression -> INT CHAR DIVIDE CHAR
Rule 42    expression -> FLOAT STR PLUS STR
Rule 43    expression -> FLOAT STR MINUS STR
Rule 44    expression -> FLOAT STR TIMES STR
Rule 45    expression -> FLOAT STR DIVIDE STR
Rule 46    expression -> FLOAT CHAR PLUS CHAR
Rule 47    expression -> FLOAT CHAR MINUS CHAR
Rule 48    expression -> FLOAT CHAR TIMES CHAR
Rule 49    expression -> FLOAT CHAR DIVIDE CHAR
Rule 50    expression -> ID EQUAL expression
Rule 51    expression -> ID
Rule 52    expression -> empty expression

Terminals, with rules where they appear

CHAR                 : 10 38 38 39 39 40 40 41 41 46 46 47 47 48 48 49 49
DIVIDE               : 5 21 25 29 33 37 41 45 49
EQUAL                : 50
FLOAT                : 13 16 42 43 44 45 46 47 48 49
ID                   : 50 51
INT                  : 12 15 18 19 20 21 34 35 36 37 38 39 40 41
LIST                 : 
LPAREN               : 1
MINUS                : 3 6 19 23 27 31 35 39 43 47
NUMBER               : 7
PLUS                 : 2 18 22 26 30 34 38 42 46
PRINT                : 17
RPAREN               : 1
STR                  : 8 34 34 35 35 36 36 37 37 42 42 43 43 44 44 45 45
TIMES                : 4 20 24 28 32 36 40 44 48
_                    : 14
error                : 

Nonterminals, with rules where they appear

char                 : 11 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33
empty                : 52
expression           : 1 2 2 3 3 4 4 5 5 6 15 16 17 50 52 0
float                : 22 23 24 25 26 27 28 29
int                  : 30 31 32 33
string               : 9 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . MINUS expression
    (7) expression -> . NUMBER
    (9) expression -> . string
    (11) expression -> . char
    (15) expression -> . INT expression
    (16) expression -> . FLOAT expression
    (17) expression -> . PRINT expression
    (18) expression -> . INT string PLUS string
    (19) expression -> . INT string MINUS string
    (20) expression -> . INT string TIMES string
    (21) expression -> . INT string DIVIDE string
    (22) expression -> . float string PLUS string
    (23) expression -> . float string MINUS string
    (24) expression -> . float string TIMES string
    (25) expression -> . float string DIVIDE string
    (26) expression -> . float char PLUS char
    (27) expression -> . float char MINUS char
    (28) expression -> . float char TIMES char
    (29) expression -> . float char DIVIDE char
    (30) expression -> . int char PLUS char
    (31) expression -> . int char MINUS char
    (32) expression -> . int char TIMES char
    (33) expression -> . int char DIVIDE char
    (34) expression -> . INT STR PLUS STR
    (35) expression -> . INT STR MINUS STR
    (36) expression -> . INT STR TIMES STR
    (37) expression -> . INT STR DIVIDE STR
    (38) expression -> . INT CHAR PLUS CHAR
    (39) expression -> . INT CHAR MINUS CHAR
    (40) expression -> . INT CHAR TIMES CHAR
    (41) expression -> . INT CHAR DIVIDE CHAR
    (42) expression -> . FLOAT STR PLUS STR
    (43) expression -> . FLOAT STR MINUS STR
    (44) expression -> . FLOAT STR TIMES STR
    (45) expression -> . FLOAT STR DIVIDE STR
    (46) expression -> . FLOAT CHAR PLUS CHAR
    (47) expression -> . FLOAT CHAR MINUS CHAR
    (48) expression -> . FLOAT CHAR TIMES CHAR
    (49) expression -> . FLOAT CHAR DIVIDE CHAR
    (50) expression -> . ID EQUAL expression
    (51) expression -> . ID
    (52) expression -> . empty expression
    (8) string -> . STR
    (10) char -> . CHAR
    (13) float -> . FLOAT
    (12) int -> . INT
    (14) empty -> . _

    LPAREN          shift and go to state 2
    MINUS           shift and go to state 3
    NUMBER          shift and go to state 4
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    PRINT           shift and go to state 9
    ID              shift and go to state 14
    STR             shift and go to state 12
    CHAR            shift and go to state 13
    _               shift and go to state 16

    expression                     shift and go to state 1
    string                         shift and go to state 5
    char                           shift and go to state 6
    float                          shift and go to state 10
    int                            shift and go to state 11
    empty                          shift and go to state 15

state 1

    (0) S' -> expression .
    (2) expression -> expression . PLUS expression
    (3) expression -> expression . MINUS expression
    (4) expression -> expression . TIMES expression
    (5) expression -> expression . DIVIDE expression

    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    TIMES           shift and go to state 19
    DIVIDE          shift and go to state 20


state 2

    (1) expression -> LPAREN . expression RPAREN
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . MINUS expression
    (7) expression -> . NUMBER
    (9) expression -> . string
    (11) expression -> . char
    (15) expression -> . INT expression
    (16) expression -> . FLOAT expression
    (17) expression -> . PRINT expression
    (18) expression -> . INT string PLUS string
    (19) expression -> . INT string MINUS string
    (20) expression -> . INT string TIMES string
    (21) expression -> . INT string DIVIDE string
    (22) expression -> . float string PLUS string
    (23) expression -> . float string MINUS string
    (24) expression -> . float string TIMES string
    (25) expression -> . float string DIVIDE string
    (26) expression -> . float char PLUS char
    (27) expression -> . float char MINUS char
    (28) expression -> . float char TIMES char
    (29) expression -> . float char DIVIDE char
    (30) expression -> . int char PLUS char
    (31) expression -> . int char MINUS char
    (32) expression -> . int char TIMES char
    (33) expression -> . int char DIVIDE char
    (34) expression -> . INT STR PLUS STR
    (35) expression -> . INT STR MINUS STR
    (36) expression -> . INT STR TIMES STR
    (37) expression -> . INT STR DIVIDE STR
    (38) expression -> . INT CHAR PLUS CHAR
    (39) expression -> . INT CHAR MINUS CHAR
    (40) expression -> . INT CHAR TIMES CHAR
    (41) expression -> . INT CHAR DIVIDE CHAR
    (42) expression -> . FLOAT STR PLUS STR
    (43) expression -> . FLOAT STR MINUS STR
    (44) expression -> . FLOAT STR TIMES STR
    (45) expression -> . FLOAT STR DIVIDE STR
    (46) expression -> . FLOAT CHAR PLUS CHAR
    (47) expression -> . FLOAT CHAR MINUS CHAR
    (48) expression -> . FLOAT CHAR TIMES CHAR
    (49) expression -> . FLOAT CHAR DIVIDE CHAR
    (50) expression -> . ID EQUAL expression
    (51) expression -> . ID
    (52) expression -> . empty expression
    (8) string -> . STR
    (10) char -> . CHAR
    (13) float -> . FLOAT
    (12) int -> . INT
    (14) empty -> . _

    LPAREN          shift and go to state 2
    MINUS           shift and go to state 3
    NUMBER          shift and go to state 4
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    PRINT           shift and go to state 9
    ID              shift and go to state 14
    STR             shift and go to state 12
    CHAR            shift and go to state 13
    _               shift and go to state 16

    expression                     shift and go to state 21
    string                         shift and go to state 5
    char                           shift and go to state 6
    float                          shift and go to state 10
    int                            shift and go to state 11
    empty                          shift and go to state 15

state 3

    (6) expression -> MINUS . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . MINUS expression
    (7) expression -> . NUMBER
    (9) expression -> . string
    (11) expression -> . char
    (15) expression -> . INT expression
    (16) expression -> . FLOAT expression
    (17) expression -> . PRINT expression
    (18) expression -> . INT string PLUS string
    (19) expression -> . INT string MINUS string
    (20) expression -> . INT string TIMES string
    (21) expression -> . INT string DIVIDE string
    (22) expression -> . float string PLUS string
    (23) expression -> . float string MINUS string
    (24) expression -> . float string TIMES string
    (25) expression -> . float string DIVIDE string
    (26) expression -> . float char PLUS char
    (27) expression -> . float char MINUS char
    (28) expression -> . float char TIMES char
    (29) expression -> . float char DIVIDE char
    (30) expression -> . int char PLUS char
    (31) expression -> . int char MINUS char
    (32) expression -> . int char TIMES char
    (33) expression -> . int char DIVIDE char
    (34) expression -> . INT STR PLUS STR
    (35) expression -> . INT STR MINUS STR
    (36) expression -> . INT STR TIMES STR
    (37) expression -> . INT STR DIVIDE STR
    (38) expression -> . INT CHAR PLUS CHAR
    (39) expression -> . INT CHAR MINUS CHAR
    (40) expression -> . INT CHAR TIMES CHAR
    (41) expression -> . INT CHAR DIVIDE CHAR
    (42) expression -> . FLOAT STR PLUS STR
    (43) expression -> . FLOAT STR MINUS STR
    (44) expression -> . FLOAT STR TIMES STR
    (45) expression -> . FLOAT STR DIVIDE STR
    (46) expression -> . FLOAT CHAR PLUS CHAR
    (47) expression -> . FLOAT CHAR MINUS CHAR
    (48) expression -> . FLOAT CHAR TIMES CHAR
    (49) expression -> . FLOAT CHAR DIVIDE CHAR
    (50) expression -> . ID EQUAL expression
    (51) expression -> . ID
    (52) expression -> . empty expression
    (8) string -> . STR
    (10) char -> . CHAR
    (13) float -> . FLOAT
    (12) int -> . INT
    (14) empty -> . _

    LPAREN          shift and go to state 2
    MINUS           shift and go to state 3
    NUMBER          shift and go to state 4
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    PRINT           shift and go to state 9
    ID              shift and go to state 14
    STR             shift and go to state 12
    CHAR            shift and go to state 13
    _               shift and go to state 16

    expression                     shift and go to state 22
    string                         shift and go to state 5
    char                           shift and go to state 6
    float                          shift and go to state 10
    int                            shift and go to state 11
    empty                          shift and go to state 15

state 4

    (7) expression -> NUMBER .

    PLUS            reduce using rule 7 (expression -> NUMBER .)
    MINUS           reduce using rule 7 (expression -> NUMBER .)
    TIMES           reduce using rule 7 (expression -> NUMBER .)
    DIVIDE          reduce using rule 7 (expression -> NUMBER .)
    $end            reduce using rule 7 (expression -> NUMBER .)
    RPAREN          reduce using rule 7 (expression -> NUMBER .)


state 5

    (9) expression -> string .

    PLUS            reduce using rule 9 (expression -> string .)
    MINUS           reduce using rule 9 (expression -> string .)
    TIMES           reduce using rule 9 (expression -> string .)
    DIVIDE          reduce using rule 9 (expression -> string .)
    $end            reduce using rule 9 (expression -> string .)
    RPAREN          reduce using rule 9 (expression -> string .)


state 6

    (11) expression -> char .

    PLUS            reduce using rule 11 (expression -> char .)
    MINUS           reduce using rule 11 (expression -> char .)
    TIMES           reduce using rule 11 (expression -> char .)
    DIVIDE          reduce using rule 11 (expression -> char .)
    $end            reduce using rule 11 (expression -> char .)
    RPAREN          reduce using rule 11 (expression -> char .)


state 7

    (15) expression -> INT . expression
    (18) expression -> INT . string PLUS string
    (19) expression -> INT . string MINUS string
    (20) expression -> INT . string TIMES string
    (21) expression -> INT . string DIVIDE string
    (34) expression -> INT . STR PLUS STR
    (35) expression -> INT . STR MINUS STR
    (36) expression -> INT . STR TIMES STR
    (37) expression -> INT . STR DIVIDE STR
    (38) expression -> INT . CHAR PLUS CHAR
    (39) expression -> INT . CHAR MINUS CHAR
    (40) expression -> INT . CHAR TIMES CHAR
    (41) expression -> INT . CHAR DIVIDE CHAR
    (12) int -> INT .
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . MINUS expression
    (7) expression -> . NUMBER
    (9) expression -> . string
    (11) expression -> . char
    (15) expression -> . INT expression
    (16) expression -> . FLOAT expression
    (17) expression -> . PRINT expression
    (18) expression -> . INT string PLUS string
    (19) expression -> . INT string MINUS string
    (20) expression -> . INT string TIMES string
    (21) expression -> . INT string DIVIDE string
    (22) expression -> . float string PLUS string
    (23) expression -> . float string MINUS string
    (24) expression -> . float string TIMES string
    (25) expression -> . float string DIVIDE string
    (26) expression -> . float char PLUS char
    (27) expression -> . float char MINUS char
    (28) expression -> . float char TIMES char
    (29) expression -> . float char DIVIDE char
    (30) expression -> . int char PLUS char
    (31) expression -> . int char MINUS char
    (32) expression -> . int char TIMES char
    (33) expression -> . int char DIVIDE char
    (34) expression -> . INT STR PLUS STR
    (35) expression -> . INT STR MINUS STR
    (36) expression -> . INT STR TIMES STR
    (37) expression -> . INT STR DIVIDE STR
    (38) expression -> . INT CHAR PLUS CHAR
    (39) expression -> . INT CHAR MINUS CHAR
    (40) expression -> . INT CHAR TIMES CHAR
    (41) expression -> . INT CHAR DIVIDE CHAR
    (42) expression -> . FLOAT STR PLUS STR
    (43) expression -> . FLOAT STR MINUS STR
    (44) expression -> . FLOAT STR TIMES STR
    (45) expression -> . FLOAT STR DIVIDE STR
    (46) expression -> . FLOAT CHAR PLUS CHAR
    (47) expression -> . FLOAT CHAR MINUS CHAR
    (48) expression -> . FLOAT CHAR TIMES CHAR
    (49) expression -> . FLOAT CHAR DIVIDE CHAR
    (50) expression -> . ID EQUAL expression
    (51) expression -> . ID
    (52) expression -> . empty expression
    (8) string -> . STR
    (10) char -> . CHAR
    (13) float -> . FLOAT
    (12) int -> . INT
    (14) empty -> . _

  ! shift/reduce conflict for CHAR resolved as shift
    STR             shift and go to state 25
    CHAR            shift and go to state 26
    LPAREN          shift and go to state 2
    MINUS           shift and go to state 3
    NUMBER          shift and go to state 4
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    PRINT           shift and go to state 9
    ID              shift and go to state 14
    _               shift and go to state 16

  ! CHAR            [ reduce using rule 12 (int -> INT .) ]

    expression                     shift and go to state 23
    string                         shift and go to state 24
    char                           shift and go to state 6
    float                          shift and go to state 10
    int                            shift and go to state 11
    empty                          shift and go to state 15

state 8

    (16) expression -> FLOAT . expression
    (42) expression -> FLOAT . STR PLUS STR
    (43) expression -> FLOAT . STR MINUS STR
    (44) expression -> FLOAT . STR TIMES STR
    (45) expression -> FLOAT . STR DIVIDE STR
    (46) expression -> FLOAT . CHAR PLUS CHAR
    (47) expression -> FLOAT . CHAR MINUS CHAR
    (48) expression -> FLOAT . CHAR TIMES CHAR
    (49) expression -> FLOAT . CHAR DIVIDE CHAR
    (13) float -> FLOAT .
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . MINUS expression
    (7) expression -> . NUMBER
    (9) expression -> . string
    (11) expression -> . char
    (15) expression -> . INT expression
    (16) expression -> . FLOAT expression
    (17) expression -> . PRINT expression
    (18) expression -> . INT string PLUS string
    (19) expression -> . INT string MINUS string
    (20) expression -> . INT string TIMES string
    (21) expression -> . INT string DIVIDE string
    (22) expression -> . float string PLUS string
    (23) expression -> . float string MINUS string
    (24) expression -> . float string TIMES string
    (25) expression -> . float string DIVIDE string
    (26) expression -> . float char PLUS char
    (27) expression -> . float char MINUS char
    (28) expression -> . float char TIMES char
    (29) expression -> . float char DIVIDE char
    (30) expression -> . int char PLUS char
    (31) expression -> . int char MINUS char
    (32) expression -> . int char TIMES char
    (33) expression -> . int char DIVIDE char
    (34) expression -> . INT STR PLUS STR
    (35) expression -> . INT STR MINUS STR
    (36) expression -> . INT STR TIMES STR
    (37) expression -> . INT STR DIVIDE STR
    (38) expression -> . INT CHAR PLUS CHAR
    (39) expression -> . INT CHAR MINUS CHAR
    (40) expression -> . INT CHAR TIMES CHAR
    (41) expression -> . INT CHAR DIVIDE CHAR
    (42) expression -> . FLOAT STR PLUS STR
    (43) expression -> . FLOAT STR MINUS STR
    (44) expression -> . FLOAT STR TIMES STR
    (45) expression -> . FLOAT STR DIVIDE STR
    (46) expression -> . FLOAT CHAR PLUS CHAR
    (47) expression -> . FLOAT CHAR MINUS CHAR
    (48) expression -> . FLOAT CHAR TIMES CHAR
    (49) expression -> . FLOAT CHAR DIVIDE CHAR
    (50) expression -> . ID EQUAL expression
    (51) expression -> . ID
    (52) expression -> . empty expression
    (8) string -> . STR
    (10) char -> . CHAR
    (13) float -> . FLOAT
    (12) int -> . INT
    (14) empty -> . _

  ! shift/reduce conflict for STR resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    STR             shift and go to state 28
    CHAR            shift and go to state 29
    LPAREN          shift and go to state 2
    MINUS           shift and go to state 3
    NUMBER          shift and go to state 4
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    PRINT           shift and go to state 9
    ID              shift and go to state 14
    _               shift and go to state 16

  ! STR             [ reduce using rule 13 (float -> FLOAT .) ]
  ! CHAR            [ reduce using rule 13 (float -> FLOAT .) ]

    expression                     shift and go to state 27
    string                         shift and go to state 5
    char                           shift and go to state 6
    float                          shift and go to state 10
    int                            shift and go to state 11
    empty                          shift and go to state 15

state 9

    (17) expression -> PRINT . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . MINUS expression
    (7) expression -> . NUMBER
    (9) expression -> . string
    (11) expression -> . char
    (15) expression -> . INT expression
    (16) expression -> . FLOAT expression
    (17) expression -> . PRINT expression
    (18) expression -> . INT string PLUS string
    (19) expression -> . INT string MINUS string
    (20) expression -> . INT string TIMES string
    (21) expression -> . INT string DIVIDE string
    (22) expression -> . float string PLUS string
    (23) expression -> . float string MINUS string
    (24) expression -> . float string TIMES string
    (25) expression -> . float string DIVIDE string
    (26) expression -> . float char PLUS char
    (27) expression -> . float char MINUS char
    (28) expression -> . float char TIMES char
    (29) expression -> . float char DIVIDE char
    (30) expression -> . int char PLUS char
    (31) expression -> . int char MINUS char
    (32) expression -> . int char TIMES char
    (33) expression -> . int char DIVIDE char
    (34) expression -> . INT STR PLUS STR
    (35) expression -> . INT STR MINUS STR
    (36) expression -> . INT STR TIMES STR
    (37) expression -> . INT STR DIVIDE STR
    (38) expression -> . INT CHAR PLUS CHAR
    (39) expression -> . INT CHAR MINUS CHAR
    (40) expression -> . INT CHAR TIMES CHAR
    (41) expression -> . INT CHAR DIVIDE CHAR
    (42) expression -> . FLOAT STR PLUS STR
    (43) expression -> . FLOAT STR MINUS STR
    (44) expression -> . FLOAT STR TIMES STR
    (45) expression -> . FLOAT STR DIVIDE STR
    (46) expression -> . FLOAT CHAR PLUS CHAR
    (47) expression -> . FLOAT CHAR MINUS CHAR
    (48) expression -> . FLOAT CHAR TIMES CHAR
    (49) expression -> . FLOAT CHAR DIVIDE CHAR
    (50) expression -> . ID EQUAL expression
    (51) expression -> . ID
    (52) expression -> . empty expression
    (8) string -> . STR
    (10) char -> . CHAR
    (13) float -> . FLOAT
    (12) int -> . INT
    (14) empty -> . _

    LPAREN          shift and go to state 2
    MINUS           shift and go to state 3
    NUMBER          shift and go to state 4
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    PRINT           shift and go to state 9
    ID              shift and go to state 14
    STR             shift and go to state 12
    CHAR            shift and go to state 13
    _               shift and go to state 16

    expression                     shift and go to state 30
    string                         shift and go to state 5
    char                           shift and go to state 6
    float                          shift and go to state 10
    int                            shift and go to state 11
    empty                          shift and go to state 15

state 10

    (22) expression -> float . string PLUS string
    (23) expression -> float . string MINUS string
    (24) expression -> float . string TIMES string
    (25) expression -> float . string DIVIDE string
    (26) expression -> float . char PLUS char
    (27) expression -> float . char MINUS char
    (28) expression -> float . char TIMES char
    (29) expression -> float . char DIVIDE char
    (8) string -> . STR
    (10) char -> . CHAR

    STR             shift and go to state 12
    CHAR            shift and go to state 13

    string                         shift and go to state 31
    char                           shift and go to state 32

state 11

    (30) expression -> int . char PLUS char
    (31) expression -> int . char MINUS char
    (32) expression -> int . char TIMES char
    (33) expression -> int . char DIVIDE char
    (10) char -> . CHAR

    CHAR            shift and go to state 13

    char                           shift and go to state 33

state 12

    (8) string -> STR .

    PLUS            reduce using rule 8 (string -> STR .)
    MINUS           reduce using rule 8 (string -> STR .)
    TIMES           reduce using rule 8 (string -> STR .)
    DIVIDE          reduce using rule 8 (string -> STR .)
    $end            reduce using rule 8 (string -> STR .)
    RPAREN          reduce using rule 8 (string -> STR .)


state 13

    (10) char -> CHAR .
